--- a/src/template/index.html
+++ b/src/template/index.html
@@ -7,8 +7,18 @@
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 </head>
 <body>
-  <div class="h-screen w-screen flex justify-center items-center">
-    <h1 class="text-4xl font-bold text-gray-800">Hello World</h1>
+  <div class="h-screen w-screen flex flex-col justify-center items-center space-y-4">
+    <h1 class="text-4xl font-bold">Simple Form to explore the HTMX</h1>
+    <div class="space-y-4 w-60">
+      <input type="text" name="username" placeholder="name">
+      <input type="email" name="email" placeholder="email">
+      <input type="tel" name="phone" placeholder="phone number">
+      <div class="flex">
+        <input class="border-none outline-none active:border-none active:outline-none hover:border-none hover:outline-none w-[80%]" type="password" name="password" placeholder="********">
+        <button type="">show</button>
+      </div>
+      <button class="ml-14 bg-black py-2 px-10 text-white ">sign up</button>
+    </div>
   </div>
 </body>
 </html>
