updates: HTMX CDN features

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -8,8 +8,13 @@
   <script src="https://cdn.tailwindcss.com?plugins=typography,aspect-ratio,line-clamp"></script>
 </head>
 <body>
-  <div class="h-screen w-screen flex flex-col justify-center items-center space-y-4">
-    <h1 class="text-4xl font-bold">Simple Form to explore the HTMX</h1>
+  <div class="flex justify-center mt-40">
+    <h1 class="text-blue-400 text-6xl font-bold font-sans tracking-[0.2em]">
+      FORM HANDLING
+    </h1>
+  </div>
+  <div class="h-screen w-screen flex flex-col items-center mt-4 space-y-4">
+    <h1 class="text-l font-light tracking-[0.3em]">Simple Form to explore the HTMX</h1>
     <div class="space-y-4 w-60">
       <input class="p-2 border border-gray-600 text-gray-600 active:outline-none hover:outline-none " type="text" name="username" placeholder="name">
       <input class="p-2 border border-gray-600 text-gray-600 active:outline-none hover:outline-none" type="email" name="email" placeholder="email">
